# Synthesis_of_Digital_Systems_labs

./: README.md
lab-module-1/: #environment.sh#  .gitignore  README.md  environment.sh
lab-module-1/sdk.wsp/: debug_bm_remote.launch
lab-module-1/sdk.wsp/.metadata/: version.ini
lab-module-1/sdk.wsp/.metadata/.mylyn/.taskListIndex/: segments_1
lab-module-1/sdk.wsp/.metadata/.plugins/org.eclipse.cdt.core/: sw.1683045679016.pdom
lab-module-1/sdk.wsp/.metadata/.plugins/org.eclipse.cdt.ui/: dialog_settings.xml
lab-module-1/sdk.wsp/.metadata/.plugins/org.eclipse.debug.ui/: dialog_settings.xml  (+1 more)
lab-module-1/sw/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  main_bm.c  main_os.c
lab-module-1/sw/csp/inc/: uart_drv.h
lab-module-1/sw/csp/src/: uart_drv.c
lab-module-1/vp/: README.md  uaerin
lab-module-1/vp/ini/: etiss.ini
lab-module-2/p1_getting_started/lab1/fir_prj/: .cproject  .project  .vivado_hls_log_all.xml
lab-module-2/p2_design_analysis/lab1/dct_prj/: .cproject  .project  .vivado_hls_log_all.xml  vivado_hls.app
lab-module-3/: .gitignore  LICENSE  README.md  environment.sh
lab-module-3/hls/: .gitignore  Makefile  README.md
lab-module-3/hls/aes_ha_basic_prj/: .cproject  .project  .vivado_hls_log_all.xml  vivado_hls.app
lab-module-3/hls/aes_ha_basic_prj/.apc/: autopilot.apfmapping
lab-module-3/hls/aes_ha_basic_prj/sol1/: script.tcl  sol1.aps  sol1_data.json
lab-module-3/hls/aes_ha_basic_prj/sol2/: script.tcl  sol2.aps  sol2_data.json
lab-module-3/hls/aes_ha_basic_prj/sol3/: directives.tcl  script.tcl  sol3.aps  sol3.directive  sol3_data.json
lab-module-3/hls/aes_ha_dma_prj/: .cproject  .project  .vivado_hls_log_all.xml  vivado_hls.app
lab-module-3/hls/aes_ha_dma_prj/.apc/: autopilot.apfmapping
lab-module-3/hls/aes_ha_dma_prj/sol1/: script.tcl  sol1.aps  sol1_data.json
lab-module-3/hls/aes_ha_dma_prj/sol2/: directives.tcl  script.tcl  sol2.aps  sol2.directive  sol2_data.json
lab-module-3/hls/aes_ha_dma_prj/sol3/: directives.tcl  script.tcl  sol3.aps  sol3.directive  sol3_data.json
lab-module-3/hls/c_src/: aes.c
lab-module-3/hls/hls/basic/: aes_ha.c  aes_ha.h
lab-module-3/hls/hls/dma/: aes_ha.c  aes_ha.h
lab-module-3/hls/testbench/: aes_test.c
lab-module-3/sdk.wsp/: debug_sw_remote.launch
lab-module-3/sdk.wsp/.metadata/: version.ini
lab-module-3/sw/: .cproject  CMakeLists.txt  README.md  main_hw.c  main_hw_dma.c  main_sw.c
lab-module-3/sw/aes/: aes_ha_drv.c  aes_ha_drv.h
lab-module-3/sw/xil/: xil_io.h
lab-module-3/vp/: README.md
lab-module-3/vp/ini/: etiss.ini  vp.ini
(+1262 files in other folders)
